# agent-hackathon

./: .gitignore  CODE_REVIEW.md  DAY1_NIGHT_UPDATE.md  HACKATHON_SUBMISSION.md  LICENSE  PROGRESS_UPDATE.md  README.md  READY_TO_DEPLOY.md  SETUP_STATUS.md  STATUS.md  deploy-complete.js  deploy-pup.js  deploy.sh  init-anchor.sh  package-lock.json  package.json  test-local.sh
agent/: .env.example  autonomous-agent.js  db.js  ecosystem.config.js  index-supabase.js  index.js  init-db-http.js  init-db.js  package-lock.json  package.json  setup-database.js  setup.sh  test-endpoints.sh
docs/: ALL_MARKETING_POSTS.md  ARCHITECTURE.md  AUTONOMOUS_ARCHITECTURE.md  AUTONOMOUS_README.md  BUILD_PLAN.md  DAY1_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  E2E_COMPLETE.md  LIVE_DEMO_STATUS.md  MARKETING_POSTS.md  POSTED_MARKETING.md  PROGRESS_UPDATE.md  READY_TO_DEPLOY.md  REDDIT_POSTS_READY.md  SECURITY_REVIEW.md  SETUP_STATUS.md  STATUS.md  TODO.md  VERCEL_DEPLOY.md
program/: SETUP.md  lib.rs
program/payinbox/: Anchor.toml  Cargo.toml  DEPLOYMENT.md  QUICKSTART.md
program/payinbox/programs/payinbox/: Cargo.toml
program/payinbox/programs/payinbox/src/: lib.rs
program/payinbox/tests/: payinbox.js
scripts/: deploy-log.txt  deploy-playground.js  deploy.sh  init-anchor.sh  supabase-schema-fixed.sql  supabase-schema.sql  test-local.sh
web/: .env.local.example  GRADIENT_EXPERIMENT.md  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
web/app/: globals.css  globals.css.backup  layout.tsx  page.tsx
web/components/: GradientBackground.tsx  (+8 more)
(+8 files in other folders)
