[package]
name = "payinbox"
version = "0.1.0"
description = "Send crypto via email - no wallet required"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "payinbox"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.0"
anchor-spl = "0.32.0"
solana-keccak-hasher = "2.2"
